Cleans code after DB changes

--- a/config/locales/arb/models.yml
+++ b/config/locales/arb/models.yml
@@ -882,7 +882,8 @@ arb:
       # financial_asset_depreciation: "Amortissement d’immobilisation"
       financial_year: "السنة المالية"
       # fungus: "Champignon"
-      # gap: ""
+      # gap: "Perte ou profit"
+      # gap_item: "Élément de perte ou profit"
       # immatter: "Immatériel"
       # incoming_delivery: "Approvisionnement"
       # incoming_delivery_item: "Élément d’approvisionnement"
