--- a/config/locales/fra/complement.yml
+++ b/config/locales/fra/complement.yml
@@ -2350,7 +2350,8 @@ fra:
         financial_asset_depreciation: "Amortissement d’immobilisation"
         financial_year: "Exercice"
         fungus: "Champignon"
-        gap: ""
+        gap: "Perte ou profit"
+        gap_item: "Élément de perte ou profit"
         immatter: "Immatériel"
         incoming_delivery: "Approvisionnement"
         incoming_delivery_item: "Élément d’approvisionnement"
