--- a/config/locales/arb/action.yml
+++ b/config/locales/arb/action.yml
@@ -23,7 +23,7 @@ arb:
       show: "الحساب : %{number} - %{name}"
       # unmark: "Délettrer un compte"
     backend/activities:
-      # edit: "Modifier une activité\_: %{name} "
+      # edit: "Modifier une activité\_: %{name}"
       # index: "Activités"
       # new: "Nouvelle activité"
       # show: "%{name}"
@@ -34,6 +34,7 @@ arb:
       # detach: "Dissocier une transaction"
       # index: "Transactions"
       # select: "Ajouter une transaction"
+      # show: "Affaire N°%{number}"
     backend/aggregators:
       # index: "Agrégateurs"
       # show: "%{name}"
@@ -300,7 +301,8 @@ arb:
       index: "ممارسة المحاسبة"
       new: "انشاء مهنة جديدة"
       show: "ممارسة المحاسبة %{code}"
-    backend/gaps: #?
+    backend/gaps:
+      # show: "Perte ou profit N°%{number}"
     backend/help: #?
     backend/helps:
       # index: "Aide"
@@ -491,7 +493,10 @@ arb:
       # new: "Nouvelle culture"
       # show: "Culture\_: %{name}"
     backend/posologies: #?
-    backend/postal_zones: #?
+    backend/postal_zones:
+      # edit: "Modifier la zone postale\_: %{name}"
+      # index: "Zones postales"
+      # new: "Nouvelle zone postale"
     backend/preferences:
       # edit: "Modifier les préférences"
       # index: "Préférences"
