--- a/config/locales/jpn/models.yml
+++ b/config/locales/jpn/models.yml
@@ -354,7 +354,8 @@ jpn:
       # financial_asset_depreciation: "Amortissement d’immobilisation"
       # financial_year: "Exercice"
       # fungus: "Champignon"
-      # gap: ""
+      # gap: "Perte ou profit"
+      # gap_item: "Élément de perte ou profit"
       # immatter: "Immatériel"
       # incoming_delivery: "Approvisionnement"
       # incoming_delivery_item: "Élément d’approvisionnement"
