--- a/config/locales/spa/action.yml
+++ b/config/locales/spa/action.yml
@@ -23,7 +23,7 @@ spa:
       show: "Compte : %{number} - %{name}"
       # unmark: "Délettrer un compte"
     backend/activities:
-      # edit: "Modifier une activité\_: %{name} "
+      # edit: "Modifier une activité\_: %{name}"
       # index: "Activités"
       # new: "Nouvelle activité"
       # show: "%{name}"
@@ -34,6 +34,7 @@ spa:
       # detach: "Dissocier une transaction"
       # index: "Transactions"
       # select: "Ajouter une transaction"
+      # show: "Affaire N°%{number}"
     backend/aggregators:
       # index: "Agrégateurs"
       # show: "%{name}"
@@ -281,7 +282,8 @@ spa:
       index: "Exercicios contables"
       new: "Crear un nuevo ejercicio"
       show: "Exercicio contable %{code}"
-    backend/gaps: #?
+    backend/gaps:
+      # show: "Perte ou profit N°%{number}"
     backend/help: #?
     backend/helps:
       # index: "Aide"
@@ -468,7 +470,10 @@ spa:
       # new: "Nouvelle culture"
       # show: "Culture\_: %{name}"
     backend/posologies: #?
-    backend/postal_zones: #?
+    backend/postal_zones:
+      # edit: "Modifier la zone postale\_: %{name}"
+      # index: "Zones postales"
+      # new: "Nouvelle zone postale"
     backend/preferences:
       # edit: "Modifier les préférences"
       # index: "Préférences"
