--- a/config/locales/eng/models.yml
+++ b/config/locales/eng/models.yml
@@ -1536,6 +1536,8 @@ eng:
   models:
     account:
       label: "%{number} - %{name}"
+    affair:
+      # bookkeep: "[%{resource} %{number}] De %{third}"
     cash_transfer:
       bookkeep: "[%{resource} %{number}] From %{emitter} to %{receiver} %{description}"
     catalog:
