--- a/config/locales/fra/action.yml
+++ b/config/locales/fra/action.yml
@@ -23,10 +23,10 @@ fra:
       new: "Nouvelle activité"
       show: "%{name}"
     backend/affairs:
-      attach: "Associer une transaction"
-      detach: "Dissocier une transaction"
-      # finish: "Finish backend/affair"
-      index: "Transactions"
+      attach: "Associer une affaire"
+      detach: "Dissocier une affaire"
+      finish: "Passer en perte et profit le reliquat"
+      index: "Affaires"
       select: "Ajouter une transaction"
       show: "Affaire N°%{number}"
     backend/aggregators:
