--- a/config/locales/jpn/action.yml
+++ b/config/locales/jpn/action.yml
@@ -23,9 +23,10 @@ jpn:
     backend/activity_repartitions: #?
     backend/activity_watchings: #?
     backend/affairs:
-      # attach: "Associer une transaction"
-      # detach: "Dissocier une transaction"
-      # index: "Transactions"
+      # attach: "Associer une affaire"
+      # detach: "Dissocier une affaire"
+      # finish: "Passer en perte et profit le reliquat"
+      # index: "Affaires"
       # select: "Ajouter une transaction"
       # show: "Affaire N°%{number}"
     backend/aggregators:
