introduce Guide (in progress)

--- a/config/locales/arb/action.yml
+++ b/config/locales/arb/action.yml
@@ -304,6 +304,8 @@ arb:
       show: "ممارسة المحاسبة %{code}"
     backend/gaps:
       # show: "Perte ou profit N°%{number}"
+    backend/guide_indicator_data: #?
+    backend/guides: #?
     backend/help: #?
     backend/helps:
       # index: "Aide"
