--- a/config/locales/jpn/action.yml
+++ b/config/locales/jpn/action.yml
@@ -20,7 +20,7 @@ jpn:
       # index: "Activités"
       # new: "Nouvelle activité"
       # show: "%{name}"
-    backend/activity_repartitions: #?
+    backend/activity_distributions: #?
     backend/activity_watchings: #?
     backend/affairs:
       # attach: "Associer une affaire"
@@ -32,11 +32,7 @@ jpn:
     backend/aggregators:
       # index: "Agrégateurs"
       # show: "%{name}"
-    backend/analytic_repartitions:
-      # edit: "Modifier la répartion analytique\_: %{id} "
-      # index: "Répartitions analytiques"
-      # new: "Nouvelle répartition analytique"
-      # show: "Répartition %{id}"
+    backend/analytic_distributions: #?
     backend/animal_groups:
       # edit: "Modifier le groupe d’animaux\_: %{name}"
       # index: "Groupes d’animaux"
@@ -629,7 +625,6 @@ jpn:
     # backend/activities: "Activités"
     # backend/affairs: "Affaires"
     # backend/aggregators: "Agrégateurs"
-    # backend/analytic_repartitions: "Répartitions analytiques"
     # backend/animal_groups: "Groupes d’animaux"
     # backend/animals: "Animaux"
     # backend/bank_statements: "Relevés de compte bancaire"
@@ -1938,19 +1933,19 @@ jpn:
   unroll:
     # backend/accounts: "{number}. {name}"
     # backend/activities: "{name}"
-    backend/activity_repartitions: #?
-    # backend/analytic_repartitions: "{id}"
-    # backend/animals: "{name} - {work_number}"
+    backend/activity_distributions: #?
+    # backend/analytic_distributions: "{id}"
+    # backend/animals: "{name} ‒ {work_number}"
     # backend/campaigns: "{name}"
     # backend/catalog_prices: "{name}"
     # backend/entity_links: "{started_at}"
     # backend/events: "{name}"
     # backend/journal_entry_items: "{name}"
     # backend/logs: "{observed_at}"
-    # backend/matters: "{name} - {work_number}"
+    # backend/matters: "{name} ‒ {work_number}"
     # backend/observations: "{content}"
     # backend/operations: "{reference_name} ({started_at})"
-    # backend/plants: "{name} - {work_number}"
+    # backend/plants: "{name} ‒ {work_number}"
     # backend/prescriptions: "{reference_number}"
     # backend/product_indicators: "{id}"
     # backend/product_memberships: "{started_at}"
