--- a/config/locales/jpn/models.yml
+++ b/config/locales/jpn/models.yml
@@ -4,15 +4,11 @@ jpn:
       activity:
         # nature: "Type de centre analytique"
         # net_margin: "Marge nette"
-        # nomen: "Code analytique"
         # parent: "Activité parente"
         # work_unit: "Unité d’œuvre"
-      activity_repartition: #?
+      activity_distribution: #?
       activity_watching: #?
-      analytic_repartition:
-        # journal_entry_item: "Ligne comptable concernée"
-        # product_nature: "Type de produit concerné"
-        # repartition_percentage: "Pourcentage d’affectation"
+      analytic_distribution: #?
       animal:
         # born_at: "Né(e) le"
         # variety: "Race"
@@ -26,19 +22,15 @@ jpn:
         # content_maximal_quantity: "Quantité maximale supportée"
         # content_nature: "Type de Produit contenu"
         # variety: "Type"
-      campaign:
-        # harvest_year: "Année de récolte"
+      campaign: #?
       cash: #?
       company: #?
-      cultivable_land_parcel:
-        # area: "Superficie"
-      cultivable_zone:
-        # area: "Superficie"
+      cultivable_land_parcel: #?
+      cultivable_zone: #?
       deposit: #?
       document:
         # filename: "Fichier"
       document_archive:
-        # archived_at: "Archivé le"
         # file_pages_count: "Nombre de page"
       document_template:
         # managed: "Géré par le système"
@@ -67,8 +59,6 @@ jpn:
         # last_journal_entry: "Écriture de fin d’exercice"
         # stopped_on: "Date de clôture"
       incoming_payment:
-        # amount: "Montant"
-        # received: "Reçu"
         # to_bank_on: "À encaisser le"
       incoming_payment_use: #?
       intervention:
@@ -95,11 +85,8 @@ jpn:
       matter:
         # born_at: "Fabriqué le"
         # dead_at: "Détruit/consommé le"
-      meeting:
-        # duration: "Durée (en minutes)"
-        # place: "Lieu"
-      meeting_nature:
-        # duration: "Durée par défaut (en min.)"
+      meeting: #?
+      meeting_nature: #?
       operation: #?
       outgoing_delivery:
         # items: "Lignes de livraison"
@@ -318,7 +305,7 @@ jpn:
       # account_balance: "Balance de compte"
       # activity: "Activité"
       # affair: "Affaire"
-      # analytic_repartition: "Répartition analytique"
+      # analytic_distribution: "Répartition analytique"
       # animal: "Animal"
       # animal_group: "Groupe d’animaux"
       # animal_medicine: "Produits vétérinaires"
@@ -464,6 +451,7 @@ jpn:
     # amount: "Montant"
     # amounts_scale: "Nombre de chiffres après le virgule"
     # annotation: "Annotation"
+    # archived_at: "Archivé le"
     # archiving: "Méthode d’archivage"
     # arrival_cause: "Cause d’entrée"
     # arrived_on: "Date d’entrée"
@@ -637,6 +625,7 @@ jpn:
     # direct_links: "Liens directs"
     # direction: "Type"
     # discount_percentage: "Pourcentage d’escompte"
+    # distributions: "Répartitions"
     # district: "Zone administrative"
     # document: "Document"
     # document_archives: "Archives documentaires"
@@ -708,6 +697,7 @@ jpn:
     # gravity: "Gravité"
     # group: "Groupe"
     # groups: "Groupes"
+    # harvest_year: "Année de récolte"
     # has_downpayment: "A un acompte"
     # iban: "IBAN"
     id: "唯一の番号"
@@ -942,7 +932,7 @@ jpn:
     # real_currency_rate: "Real currency rate"
     # real_debit: "Real debit"
     # receipt: "Reçu électronique"
-    # received: "Reçue"
+    # received: "Reçu"
     # received_at: "Reçu le"
     # reception_amount: "Montant reçu"
     # reception_cash: "Trésorerie réceptrice"
@@ -964,7 +954,6 @@ jpn:
     # remaining_duration: "Durée d’utilisation prévue (heures)"
     # remember_me: "Se souvenir de moi"
     # reminder_submissive: "Soumis à la relance"
-    # repartitions: "Repartitions"
     # repeatable: "Répétable"
     # required: "Obligatoire"
     # reservoir: "Réservoir"
