--- a/config/locales/fra/action.yml
+++ b/config/locales/fra/action.yml
@@ -32,11 +32,11 @@ fra:
     backend/aggregators:
       index: "Agrégateurs"
       show: "%{name}"
-    backend/analytic_repartitions:
-      edit: "Modifier la répartion analytique\_: %{id} "
-      index: "Répartitions analytiques"
-      new: "Nouvelle répartition analytique"
-      show: "Répartition %{id}"
+    backend/analytic_distributions:
+      # edit: "Edit backend/analytic distribution"
+      # index: "Index backend/analytic distribution"
+      # new: "New backend/analytic distribution"
+      # show: "Show backend/analytic distribution"
     backend/animal_groups:
       edit: "Modifier le groupe d’animaux\_: %{name}"
       index: "Groupes d’animaux"
@@ -675,7 +675,7 @@ fra:
     backend/activities: "Activités"
     backend/affairs: "Affaires"
     backend/aggregators: "Agrégateurs"
-    backend/analytic_repartitions: "Répartitions analytiques"
+    # backend/analytic_distributions: "Backend/analytic distributions"
     backend/animal_groups: "Groupes d’animaux"
     # backend/animal_medicines: "Backend/animal medicines"
     backend/animals: "Animaux"
@@ -2043,18 +2043,18 @@ fra:
   unroll:
     backend/accounts: "{number}. {name}"
     backend/activities: "{name}"
-    backend/analytic_repartitions: "{id}"
-    backend/animals: "{name} - {work_number}"
+    backend/analytic_distributions: "{id}"
+    backend/animals: "{name} ‒ {work_number}"
     backend/campaigns: "{name}"
     backend/catalog_prices: "{name}"
     backend/entity_links: "{started_at}"
     backend/events: "{name}"
     backend/journal_entry_items: "{name}"
     backend/logs: "{observed_at}"
-    backend/matters: "{name} - {work_number}"
+    backend/matters: "{name} ‒ {work_number}"
     backend/observations: "{content}"
     backend/operations: "{reference_name} ({started_at})"
-    backend/plants: "{name} - {work_number}"
+    backend/plants: "{name} ‒ {work_number}"
     backend/prescriptions: "{reference_number}"
     backend/product_indicators: "{id}"
     backend/product_memberships: "{started_at}"
