--- a/config/locales/fra/complement.yml
+++ b/config/locales/fra/complement.yml
@@ -2315,7 +2315,7 @@ fra:
         account_balance: "Balance de compte"
         activity: "Activité"
         affair: "Affaire"
-        analytic_repartition: "Répartition analytique"
+        analytic_distribution: "Répartition analytique"
         animal: "Animal"
         animal_group: "Groupe d’animaux"
         animal_medicine: "Produits vétérinaires"
