Reviews guides and adds analyses history which is quite necessary for tracking

--- a/config/locales/arb/complement.yml
+++ b/config/locales/arb/complement.yml
@@ -339,6 +339,8 @@ arb:
         ZAR: "راند جنوب أفريقي"
         ZMK: "كواشا"
         ZWD: "دولار زمبابوي"
+    guide:
+
     immatter:
 
     intervention:
