--- a/config/locales/eng/action.yml
+++ b/config/locales/eng/action.yml
@@ -278,6 +278,7 @@ eng:
       show: "Financial year %{code}"
     backend/gaps:
       # show: "Perte ou profit N°%{number}"
+    backend/guide_analyses: #?
     backend/guide_indicator_data: #?
     backend/guides: #?
     backend/help:  #?
