--- a/config/locales/eng/nomenclatures.yml
+++ b/config/locales/eng/nomenclatures.yml
@@ -1065,6 +1065,8 @@ eng:
         # wheat: "Blé"
         # winter_straw_cereal: "Céréales à paille d'hiver"
       # name: "Typologie de culture (France)"
+    guide_natures:
+      items: #?
     incidents: #?
     indicators:
       attributes:
