--- a/config/locales/fra/complement.yml
+++ b/config/locales/fra/complement.yml
@@ -1575,6 +1575,8 @@ fra:
         ZAR: "Rand"
         ZMK: "Kwacha zambien"
         ZWL: "Dollar zimbabwéen"
+    guide:
+
     immatter:
       variety:
         acetal: "Acetal"
