--- a/config/locales/fra/models.yml
+++ b/config/locales/fra/models.yml
@@ -283,7 +283,8 @@ fra:
       gap: "Perte ou profit"
       gap_item: "Élément de perte ou profit"
       # guide: "Guide"
-      # guide_indicator_datum: "Guide indicator datum"
+      # guide_analysis: "Guide analysis"
+      # guide_analysis_point: "Guide analysis point"
       immatter: "Immatériel"
       incoming_delivery: "Approvisionnement"
       incoming_delivery_item: "Élément d’approvisionnement"
@@ -377,6 +378,7 @@ fra:
     absolute_currency: "Absolute currency"
     absolute_debit: "Absolute debit"
     # absorber: "Absorber"
+    acceptance_status: "Acceptance status"
     account: "Compte comptable"
     account_balances: "Balances de compte"
     accountable: "Comptabilisable"
@@ -391,6 +393,7 @@ fra:
     address: "Adresse"
     addresses: "Adresses"
     administrator: "Administrateur système"
+    # advice_reference_name: "Advice reference name"
     affair: "Affaire"
     affairs: "Affaires"
     # affectation_percentage: "Affectation percentage"
@@ -401,6 +404,8 @@ fra:
     allocation_account: "Compte de dotation"
     amount: "Montant"
     amounts_scale: "Nombre de chiffres après le virgule" #?
+    # analyses: "Analyses"
+    # analysis: "Analysis"
     annotation: "Annotation"
     archived_at: "Archivé le"
     # archives: "Archives"
@@ -637,12 +642,13 @@ fra:
     # events: "Events"
     # evolvable: "Evolvable"
     exclusive: "Exclusif"
+    # execution_number: "Execution number"
     expiration_delay: "Délai d’expiration"
     expired_on: "Date d’expiration"
     exportable: "Exportable"
     exportable_columns: "Colonnes exportables"
     expression: "Expression" #?
-    external: "Externe à l’exploitation" #?
+    external: "Externe à l’exploitation"
     failed_attempts: "Tentatives de connexions échouées"
     family: "Famille"
     father: "Père"
@@ -666,6 +672,7 @@ fra:
     first_name: "Prénom"
     first_number: "Premier numéro"
     formats: "Formats"
+    frequency: "Frequency"
     frozen_indicators: "Frozen indicators"
     frozen_indicators_list: "Frozen indicators list"
     full_name: "Nom complet"
@@ -681,6 +688,7 @@ fra:
     gravity: "Gravité"
     group: "Groupe"
     groups: "Groupes"
+    # guide: "Guide"
     harvest_year: "Année de récolte"
     has_downpayment: "A un acompte"
     # horizontal_rotation: "Horizontal rotation"
@@ -738,6 +746,7 @@ fra:
     label: "Libellé"
     # land_parcels: "Land parcels"
     language: "Langue"
+    # last_analysis: "Last analysis"
     last_bank_statement: "Dernier relevé bancaire"
     last_cweek: "Dernière semaine"
     last_journal_entry: "Écriture de fin d’exercice"
@@ -869,6 +878,7 @@ fra:
     planned_on: "Prévu le"
     point: "Point"
     point_value: "Point value"
+    # points: "Points"
     population: "Population"
     population_counting: "Gestion quantitative"
     position: "Position"
@@ -953,6 +963,10 @@ fra:
     reference: "Référence"
     reference_name: "Référence"
     reference_number: "N°Référence"
+    # reference_source_content_type: "Reference source content type"
+    # reference_source_file_name: "Reference source file name"
+    # reference_source_file_size: "Reference source file size"
+    # reference_source_updated_at: "Reference source updated at"
     # reference_tax: "Reference tax"
     reflections: "Reflections"
     remaining_duration: "Durée d’utilisation prévue (heures)" #?
