--- a/config/locales/spa/action.yml
+++ b/config/locales/spa/action.yml
@@ -281,6 +281,7 @@ spa:
       show: "Exercicio contable %{code}"
     backend/gaps:
       # show: "Perte ou profit N°%{number}"
+    backend/guide_analyses: #?
     backend/guide_indicator_data: #?
     backend/guides: #?
     backend/help: #?
