--- a/config/locales/spa/complement.yml
+++ b/config/locales/spa/complement.yml
@@ -361,6 +361,8 @@ spa:
         ZAR: "Rand sudafricano"
         ZMK: "Kwacha zambiano"
         ZWL: "Dólar zimbabuense"
+    guide:
+
     immatter:
 
     intervention:
