--- a/config/locales/arb/action.yml
+++ b/config/locales/arb/action.yml
@@ -300,6 +300,7 @@ arb:
       show: "ممارسة المحاسبة %{code}"
     backend/gaps:
       # show: "Perte ou profit N°%{number}"
+    backend/guide_analyses: #?
     backend/guide_indicator_data: #?
     backend/guides: #?
     backend/help: #?
