--- a/config/locales/jpn/nomenclatures.yml
+++ b/config/locales/jpn/nomenclatures.yml
@@ -1019,6 +1019,8 @@ jpn:
         # wheat: "Blé"
         # winter_straw_cereal: "Céréales à paille d'hiver"
       # name: "Typologie de culture (France)"
+    guide_natures:
+      items: #?
     indicators:
       attributes:
         # choices: "Choix"
