--- a/config/locales/fra/action.yml
+++ b/config/locales/fra/action.yml
@@ -1948,7 +1948,7 @@ fra:
     journal_reopened_on: "Le %{journal} a été déclôturé au %{closed_on} correctement."
     mails_are_sent: "Les courriels ont été envoyés"
     need_balanced_journal_to_tax_declaration: "Tous vos journaux doivent être clôturés et équilibrés à cette date." #?
-    need_building_to_create_purchase_item: "Vous devez créer un lieu de stockage pour pouvoir réaliser un achat"
+    need_building_to_create_purchase_item: "Vous devez créer un lieu de stockage pour pouvoir réaliser un achat" #?
     need_building_to_create_sale_item: "Vous devez créer un lieu de stockage pour pouvoir réaliser une vente" #?
     need_building_to_record_stock_moves: "Pour pouvoir gérer vos stocks vous devez enregistrer vos lieux de stockage."
     need_cash_to_record_statements: "Vous devez avoir au moins créer un compte bancaire pour pouvoir saisir un relevé de compte."
